# modules

./: CMakeLists.txt  LICENSE.md  README.md
apps/app1/: CMakeLists.txt
apps/app1/include/: Module.h  ModuleFile.h  ModuleLoader.h  ModuleLocator.h
apps/app1/src/: Module.cpp  ModuleFile.cpp  ModuleLoader.cpp  ModuleLocator.cpp  main.cpp
include/: ModuleDefinition.h
include/modules/: ModuleDefinition.h
include/mpl/: mpl_assert.h
modules/module1/: CMakeLists.txt
modules/module1/src/: module.cpp
modules/module2/: CMakeLists.txt
modules/module2/src/: module.cpp
modules/module3/: CMakeLists.txt
modules/module3/include/: DFSearcher.h  Digraph.h  Task.h  module.h
modules/module3/include/interfaces/: IExecutable.h  IIdentifyable.h  IMemorizable.h  ITask.h  Sink.h  Source.h
modules/module3/src/: Digraph.cpp  Task.cpp  module.cpp  test_mpl.cpp
